--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,18 +1,18 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Docker image build
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
     tags:
       - v*
   pull_request:
-    branches: [ main ]
+    branches: [main]
   release:
-    types: [ published ]
+    types: [published]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,10 +31,10 @@ jobs:
         if: "startsWith(github.ref, 'refs/tags/v')"
         run: |
           echo ::set-output name=tag::${GITHUB_REF#refs/tags/v}
-          
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        
+
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -42,7 +42,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-            
+
       - name: Login to GHCR
         uses: docker/login-action@v1
         if: github.event_name != 'pull_request'
@@ -59,7 +59,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-          
+
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
