--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,20 +9,20 @@ name = "segimap"
 path = "src/main.rs"
 
 [dependencies]
-bufstream = "*"
-env_logger = "*"
-log = "*"
-nom = "*"
-num = "*"
-openssl = "0.10"
-rand = "*"
-regex = "*"
-rust-crypto = "*"
+bufstream = "0.1.4"
+env_logger = "0.9.0"
+log = "0.4.14"
+nom = "3.2.1"
+num = "0.4.0"
+openssl = "0.10.38"
+rand = "0.5.6"
+regex = "1.5.4"
+rust-crypto = "0.2.36"
 segimap_mime = {path = "../mime/"}
-serde = "*"
-serde_derive = "*"
-serde_json = "*"
+serde = "1.0.130"
+serde_derive = "1.0.130"
+serde_json = "1.0.72"
 thiserror = "1.0"
-time = "*"
-toml = "*"
-walkdir = "*"
+time = "0.1.44"
+toml = "0.5.8"
+walkdir = "2.3.2"
