--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.14"
 nom = "3.2.1"
 num = "0.4.0"
 openssl = "0.10.38"
-rand = "0.5.6"
+getrandom = "0.2.3"
 regex = "1.5.4"
 rust-crypto = "0.2.36"
 segimap_mime = {path = "../mime/"}
