--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 bufstream = "0.1.4"
+chrono = "0.4.19"
 env_logger = "0.9.0"
 log = "0.4.14"
 nom = "3.2.1"
@@ -23,6 +24,5 @@ serde = "1.0.130"
 serde_derive = "1.0.130"
 serde_json = "1.0.72"
 thiserror = "1.0"
-time = "0.1.44"
 toml = "0.5.8"
 walkdir = "2.3.2"
